fixing button to align center

--- a/loader/loader-style.css
+++ b/loader/loader-style.css
@@ -752,7 +752,7 @@ a{
   position: absolute;
   text-align: center;
   left: 0;
-  width: 100%;
+  width: 98%;
   max-height: 90vh;
   top: 80%;
   -moz-transform: translateY(-50%);
